--- a/.gitignore
+++ b/.gitignore
@@ -70,4 +70,7 @@ fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
 
+# Settings file
+/treep/Settings.swift
+
 # End of https://www.gitignore.io/api/swift
