--- a/.gitignore
+++ b/.gitignore
@@ -49,7 +49,7 @@ playground.xcworkspace
 # you should judge for yourself, the pros and cons are mentioned at:
 # https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
 #
-# Pods/
+Pods/
 
 # Carthage
 #
@@ -71,6 +71,6 @@ fastlane/screenshots
 fastlane/test_output
 
 # Settings file
-/treep/Settings.swift
+treep/Settings.swift
 
 # End of https://www.gitignore.io/api/swift
